--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
 
+    - name: Init gradle wrapper
+      run: gradle wrapper
+
     - name: Change wrapper permissions
       run: chmod +x ./gradlew
 
