--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -43,7 +43,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: spring4-artifact
-        path: build/libs/*.jar
+        path: ${{inputs.project-name}}/build/libs/*.jar
 
     - name: List files to confirm contents - after build
       run: ls -F  
